--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,23 @@
-### Misc. ###
+# Misc
+
 INFO.fmw.md
+**/tmp/*
 .cache/
 
-### Python ###
+# Python
+
 __pycache__/
 .env
 *.pyc
-venv-headlines/
-
-### Wheels ###
-build/
+/build/
 dist/
-headlines.egg-info/
+buildlib.egg-info/
 
-### Intellij ###
+# Ediors
+
+.vscode
+.history
 *.iml
 .idea/
-
-### Vim ###
 .swp
-
-### testing ###
-**/tmp/*
 
